// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SinglePostContent - Snapshots > matches snapshot with content 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
>
  Test post content
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with different postId 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
>
  Content for different post
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with empty content 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
/>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with long content 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
>
  This is a very long post content that spans multiple lines and contains a lot of text to test how the component handles longer content. It should still render properly and maintain the whitespace-pre-line styling.
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with multiline content 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
>
  Line 1
Line 2
Line 3
</div>
`;

exports[`SinglePostContent - Snapshots > matches snapshot with special characters 1`] = `
<div
  class="whitespace-pre-line"
  data-testid="typography"
>
  Content with special chars: @#$%^&*()_+-=[]{}|;:,.&lt;&gt;?
</div>
`;
